--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Anil Patidar",
+  "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
